<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2014 Tanner Rutgers
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the
  ~ Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Warpy</string>
    <string name="imageDescription">Currently selected image</string>
    <string name="load_image">Load image</string>
    <string name="take_picture">Take picture</string>
    <string name="save_image">Save image</string>
    <string name="undo">Undo</string>
    <string name="settings">Settings</string>
    <string name="dialog_image_selection">Image Selection</string>
    <string name="dialog_discard_image">This may discard the current image. Continue?</string>
    <string name="error_save_image">Could not save image, please try again.</string>
    <string name="saving">Saving...</string>
    <string name="warping">Warping...</string>
    <string name="pref_undo_size">Undo Size</string>
    <string name="pref_undo_size_summary">Current value: 5</string>
</resources>
