<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_take_picture"
          android:title="@string/take_picture"
          android:icon="@drawable/ic_menu_camera"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_load_image"
          android:title="@string/load_image"
          android:icon="@drawable/ic_menu_gallery"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_undo"
          android:title="@string/undo"
          android:icon="@drawable/ic_menu_revert"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_save_image"
          android:title="@string/save_image"
          android:icon="@drawable/ic_menu_save"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_settings"
          android:title="@string/settings"
          android:showAsAction="never" />
</menu>